--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>PortalDecision Football Wire</title>
+  <title>PortalDecision - Transfer Industry</title>
   <link rel="stylesheet" href="/static/style.css">
   <meta http-equiv="refresh" content="300">
 </head>
@@ -12,7 +12,7 @@
     <ul>
       <li><a href="/">Home</a></li>
       <li><a href="/rankings">Rankings</a></li>
-      <li><a href="/about">About</a></li>
+      <li><a href="/industry">Industry</a></li>
       <li style="margin-left:auto;"><a href="/login" class="btn">Login</a></li>
     </ul>
   </nav>
@@ -21,7 +21,7 @@
     <img src="/static/logo.png" alt="PortalDecision Logo" class="site-logo">
     <div>
       <h1>PortalDecision</h1>
-      <p class="subtitle">NCAA Football Transfer Wire</p>
+      <p class="subtitle">Football Transfer Portal Industry News</p>
     </div>
   </header>
 
