--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>PortalDecision Rankings (Selenium)</title>
+  <title>PortalDecision Rankings (Static)</title>
   <link rel="stylesheet" href="/static/style.css">
 </head>
 <body>
@@ -17,7 +17,7 @@
 
   <header class="site-header">
     <h1>PortalDecision</h1>
-    <p class="subtitle">Football Transfer Rankings (Live Data)</p>
+    <p class="subtitle">Football Transfer Rankings (Static Data)</p>
   </header>
 
   <main>
@@ -52,7 +52,7 @@
   </main>
 
   <footer>
-    <p>Data sourced from On3 • Rendered with Selenium</p>
+    <p>Static sample data • Easily hostable on Render</p>
   </footer>
 
 </body>
